# pylolcat

./: README.md  __init__.py  pyproject.toml
pylolcat/: __init__.py
src/pylolcat/: __main__.py
